--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,12 @@
 {
-  "name": "ng-tags-input",
-  "version": "2.1.1",
-  "location": "https://github.com/mbenford/ngTagsInput-bower",
-  "homepage": "http://mbenford.github.io/ngTagsInput",
+  "name": "ec-tags-input",
+  "version": "2.2.0",
+  "location": "https://github.com/m0ngr31/ecTagsInput-bower",
   "main": [
     "ng-tags-input.min.js",
     "ng-tags-input.min.css"
   ],
-  "description": "Tags input directive for AngularJS",
+  "description": "Tags input directive for AngularJS. THIS IS A FORK OF http://mbenford.github.io/ngTagsInput v2.1.1. PLEASE USE THAT PACKAGE INSTEAD",
   "dependencies": {
     "angular": ">=1.2.1"
   }
